Twenty Fourteen: ensure toolbar doesn't have a gap at the top when you start scrolling, including back compat for 3.6. Props MikeHansenMe and SergeyBiryukov, fixes #24914. Built from https://develop.svn.wordpress.org/trunk@25063
git-svn-id: http://core.svn.wordpress.org/trunk@25049 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -614,9 +614,11 @@ body {
 		top: 0;
 }
 .admin-bar .site-header.masthead-fixed {
+	top: 28px;
+}
+.admin-bar.mp6 .site-header.masthead-fixed {
 	top: 32px;
 }
-
 #site-header {
 	position: relative;
 	z-index: 3;
